# orbitherm-solver

./: MANUAL.md  README.md  launch_orbitherm_ui.vbs  launch_ui.lnk  orbitherm_main.py  orbitherm_ui.py  pyproject.toml  requirements.txt
.cursor/rules/: examples_and_testdata_policy.mdc  freecad_future_boundary.mdc  no_big_rewrite.mdc  numerical_safety.mdc  post_refactor_continuation.mdc  regression_baseline_rules.mdc  solver_contracts.mdc  testing_and_examples.mdc  thermal_solver_rules.mdc  ui_launch_safety.mdc
__pycache__/: orbitherm_main.cpython-314.pyc.2090681550128
examples/: test1.inp  test1.out  test1_mp.csv
tests/: test_array_data.py  test_heater_control.py  test_input_parser_arrays.py  test_parser.py  test_regression.py  test_smoke.py  test_variables0_executor.py  test_variables0_qi.py
thermal_solver/: __init__.py
thermal_solver/__pycache__/: __init__.cpython-314.pyc.2090681604272
thermal_solver/app/: __init__.py  run_case.py  service.py
thermal_solver/cli/: __init__.py  main.py
thermal_solver/freecad/: __init__.py  bridge.py
thermal_solver/io/: __init__.py  input_parser.py  log_writer.py  model_builder.py  result_writer.py
thermal_solver/model/: __init__.py  array_data.py  config.py  heater.py  node.py  result.py  thermal_model.py  variables0.py
thermal_solver/post/: __init__.py  plotter.py
thermal_solver/runtime/: __init__.py  array_registry.py  heater_controller.py  variables0_executor.py  variables0_functions.py
thermal_solver/solvers/: __init__.py  arithmetic.py  common.py  implicit.py  radiation.py  steady.py  transient.py
(+21 files in other folders)
